typed-i18n/tests/compile-fail/duplicate_name.stderr
error: duplicate name
 --> tests/compile-fail/duplicate_name.rs:5:38
  |
5 | #[typed_i18n(builder = "static_str", builder = "static_str")]
  |                                      ^^^^^^^
